-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.1032 2011-05-18 16:25:28 remko Exp $
-----------------------------------------------------------------------------------------

2011-05-18	remko
	* gmt_init.c:		Two routines GMT_parse_[X|Y]_option replaced by single GMT_parse_XY_option.
				-X and -Y option now support modifiers a|c|f|r, treated separately!
	* explain_-XY*.text:	---"---
	* test/psbasemap/origin.sh:	Test new -X and -Y functionality.
	* *.sh, *.bat:		Replaced -B0 with -B/ and -B0g<value> with -Bg<value>.

2011-05-18	jluis
	* psimage_func.c:	Now is able to plot also indexed images imported via GDAL

2011-05-17	pwessel
	* grdcontour_func.c:	New contour label modifier +t|T[<file>] to save label locations to file.
	* pscontour_func.c:	---"---
	* psxy_func.c:		New quoted line label modifier +t|T[<file>] to save label locations to file.
	* psxyz_func.c:		---"---
				This feature can be used to plot contours or quoted lines in KML with
				annotation labels via gmt2kml.
	* gmt2kml_func.c:	Use -I- to turn symbol plotting off (just plot label).

2011-05-17	remko
	* pslib.*:		Changed PSL_beginplot to no longer mention "absolute" positioning,
				but use "origin" to specify the origin of the offset ('r', 'a',
				'f', 'c') for each direction.
2011-05-16	remko
	* pslib.*:		Adjusted description of PSL_beginplot argument "absolute" so it conforms
				to the actual workings (reset moved at end).
2011-05-16	pwessel
	* *.[ch]:		Clarified what is the lower-level GMT API for module development:
				Functions in gmt_prototypes.h; all expects the GMT control pointer.

2011-05-15	remko
	* gmt_nc.c:		Ignore reading of node_offset attribute. Registration is now
				based on match between actual_range attributes and coordinate arrays.

2011-05-13	pwessel
	* gmtapi_util.c:	Added a garbage collection function that is run once a module
				is finished (to free any remaining memory used by the module)